multi_index_map_derive2/tests/ui/tuple.stderr
error: MultiIndexMap2 requires a struct with named fields
 --> tests/ui/tuple.rs:4:13
  |
4 | struct Tuple(#[multi_index(ByKey)] u64);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: MultiIndexMap2 requires at least one #[multi_index(Accessor, ...)] field
 --> tests/ui/tuple.rs:4:8
  |
4 | struct Tuple(#[multi_index(ByKey)] u64);
  |        ^^^^^
